--- a/spec/fixtures/vcr_cassettes/SoapyCake_AdminAddedit/geo_targeting/creates_geo_targetings.yml
+++ b/spec/fixtures/vcr_cassettes/SoapyCake_AdminAddedit/geo_targeting/creates_geo_targetings.yml
@@ -16,7 +16,7 @@ http_interactions:
               <cake:countries>DE,FR</cake:countries>
               <cake:allow_countries>true</cake:allow_countries>
               <cake:redirect_site_offer_contract_ids>-1,-1</cake:redirect_site_offer_contract_ids>
-              <cake:add_edit_option>add</cake:add_edit_option>
+              <cake:add_edit_option>replace</cake:add_edit_option>
               <cake:set_targeting_to_geo>true</cake:set_targeting_to_geo>
             </cake:GeoTargets>
           </env:Body>
@@ -24,6 +24,12 @@ http_interactions:
     headers:
       Content-Type:
       - application/soap+xml;charset=UTF-8
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
   response:
     status:
       code: 200
@@ -34,21 +40,21 @@ http_interactions:
       Content-Type:
       - application/soap+xml; charset=utf-8
       Server:
-      - Microsoft-IIS/8.0
+      - Microsoft-IIS/8.5
       X-Aspnet-Version:
       - 4.0.30319
       X-Powered-By:
       - ASP.NET
       Date:
-      - Fri, 07 Aug 2015 13:45:43 GMT
+      - Mon, 10 Oct 2016 10:22:33 GMT
       Content-Length:
-      - '446'
+      - '449'
     body:
       encoding: UTF-8
       string: <?xml version="1.0" encoding="utf-8"?><soap:Envelope xmlns:soap="http://www.w3.org/2003/05/soap-envelope"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"><soap:Body><GeoTargetsResponse
         xmlns="http://cakemarketing.com/api/3/"><GeoTargetsResult><success>true</success><message>Geotarget(s)
-        Added</message><row_count>2</row_count></GeoTargetsResult></GeoTargetsResponse></soap:Body></soap:Envelope>
+        Replaced</message><row_count>2</row_count></GeoTargetsResult></GeoTargetsResponse></soap:Body></soap:Envelope>
     http_version: 
   recorded_at: Tue, 17 Feb 2015 12:00:00 GMT
 - request:
@@ -67,7 +73,7 @@ http_interactions:
               <cake:countries>AT,CH</cake:countries>
               <cake:allow_countries>false</cake:allow_countries>
               <cake:redirect_site_offer_contract_ids>1392,1392</cake:redirect_site_offer_contract_ids>
-              <cake:add_edit_option>add</cake:add_edit_option>
+              <cake:add_edit_option>replace</cake:add_edit_option>
               <cake:set_targeting_to_geo>true</cake:set_targeting_to_geo>
             </cake:GeoTargets>
           </env:Body>
@@ -75,6 +81,12 @@ http_interactions:
     headers:
       Content-Type:
       - application/soap+xml;charset=UTF-8
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
   response:
     status:
       code: 200
@@ -85,21 +97,21 @@ http_interactions:
       Content-Type:
       - application/soap+xml; charset=utf-8
       Server:
-      - Microsoft-IIS/8.0
+      - Microsoft-IIS/8.5
       X-Aspnet-Version:
       - 4.0.30319
       X-Powered-By:
       - ASP.NET
       Date:
-      - Fri, 07 Aug 2015 13:45:48 GMT
+      - Mon, 10 Oct 2016 10:22:33 GMT
       Content-Length:
-      - '446'
+      - '449'
     body:
       encoding: UTF-8
       string: <?xml version="1.0" encoding="utf-8"?><soap:Envelope xmlns:soap="http://www.w3.org/2003/05/soap-envelope"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"><soap:Body><GeoTargetsResponse
         xmlns="http://cakemarketing.com/api/3/"><GeoTargetsResult><success>true</success><message>Geotarget(s)
-        Added</message><row_count>2</row_count></GeoTargetsResult></GeoTargetsResponse></soap:Body></soap:Envelope>
+        Replaced</message><row_count>2</row_count></GeoTargetsResult></GeoTargetsResponse></soap:Body></soap:Envelope>
     http_version: 
   recorded_at: Tue, 17 Feb 2015 12:00:00 GMT
-recorded_with: VCR 2.9.3
+recorded_with: VCR 3.0.1
