--- a/spec/fixtures/vcr_cassettes/SoapyCake_Campaigns/_create/creates_campaigns.yml
+++ b/spec/fixtures/vcr_cassettes/SoapyCake_Campaigns/_create/creates_campaigns.yml
@@ -17,28 +17,12 @@ http_interactions:
               <cake:auto_disposition_delay_hours>0</cake:auto_disposition_delay_hours>
               <cake:payout_update_option>change</cake:payout_update_option>
               <cake:postback_delay_ms>-1</cake:postback_delay_ms>
+              <cake:third_party_name/>
               <cake:account_status_id>1</cake:account_status_id>
               <cake:affiliate_id>9643</cake:affiliate_id>
-              <cake:offer_id>11390</cake:offer_id>
-              <cake:clear_session_on_conversion>on</cake:clear_session_on_conversion>
-              <cake:currency_id>1</cake:currency_id>
               <cake:display_link_type_id>1</cake:display_link_type_id>
-              <cake:expiration_date>1970-01-01T01:00:00</cake:expiration_date>
               <cake:media_type_id>1</cake:media_type_id>
-              <cake:paid>on</cake:paid>
-              <cake:paid_redirects>off</cake:paid_redirects>
-              <cake:paid_upsells>on</cake:paid_upsells>
-              <cake:payout>1.23</cake:payout>
-              <cake:pixel_html>&lt;img src="https://example.com/pixel.png"&gt;</cake:pixel_html>
-              <cake:postback_url>http://example.com/postback</cake:postback_url>
-              <cake:redirect_404>off</cake:redirect_404>
-              <cake:redirect_domain>trk_ad2games.cakemarketing.net</cake:redirect_domain>
-              <cake:review>off</cake:review>
-              <cake:test_link>http://example.com/test</cake:test_link>
-              <cake:unique_key_hash>sha1</cake:unique_key_hash>
-              <cake:redirect_offer_contract_id>0</cake:redirect_offer_contract_id>
-              <cake:use_offer_contract_payout>on</cake:use_offer_contract_payout>
-              <cake:expiration_date_modification_type>do_not_change</cake:expiration_date_modification_type>
+              <cake:offer_id>11390</cake:offer_id>
             </cake:Campaign>
           </env:Body>
         </env:Envelope>
@@ -67,7 +51,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Fri, 04 Nov 2016 15:45:27 GMT
+      - Wed, 09 Nov 2016 17:03:56 GMT
       Content-Length:
       - '634'
     body:
@@ -75,7 +59,7 @@ http_interactions:
       string: <?xml version="1.0" encoding="utf-8"?><soap:Envelope xmlns:soap="http://www.w3.org/2003/05/soap-envelope"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"><soap:Body><CampaignResponse
         xmlns="http://cakemarketing.com/api/3/"><CampaignResult><success>true</success><message>Campaign
-        Created</message><success_info><campaign_id>23731</campaign_id><affiliate_id>9643</affiliate_id><offer_id>11390</offer_id><offer_contract_id>10338</offer_contract_id><media_type_id>1</media_type_id><original>false</original></success_info></CampaignResult></CampaignResponse></soap:Body></soap:Envelope>
+        Created</message><success_info><campaign_id>23747</campaign_id><affiliate_id>9643</affiliate_id><offer_id>11390</offer_id><offer_contract_id>10338</offer_contract_id><media_type_id>1</media_type_id><original>false</original></success_info></CampaignResult></CampaignResponse></soap:Body></soap:Envelope>
     http_version: 
-  recorded_at: Fri, 04 Nov 2016 15:45:49 GMT
+  recorded_at: Wed, 09 Nov 2016 17:04:11 GMT
 recorded_with: VCR 3.0.3
