--- a/spec/fixtures/vcr_cassettes/SoapyCake_Campaigns/_update/raises_an_error_if_the_update_was_unsuccessful.yml
+++ b/spec/fixtures/vcr_cassettes/SoapyCake_Campaigns/_update/raises_an_error_if_the_update_was_unsuccessful.yml
@@ -36,6 +36,7 @@ http_interactions:
               <cake:postback_url>http://example.com/postback</cake:postback_url>
               <cake:redirect_domain>trk_ad2games.cakemarketing.net</cake:redirect_domain>
               <cake:test_link>http://example.com/test</cake:test_link>
+              <cake:third_party_name>Max</cake:third_party_name>
               <cake:unique_key_hash>sha1</cake:unique_key_hash>
               <cake:campaign_id>9999999</cake:campaign_id>
               <cake:expiration_date>1970-01-01T01:00:00</cake:expiration_date>
@@ -67,7 +68,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Fri, 04 Nov 2016 16:40:24 GMT
+      - Wed, 09 Nov 2016 17:03:55 GMT
       Content-Length:
       - '416'
     body:
@@ -77,5 +78,5 @@ http_interactions:
         xmlns="http://cakemarketing.com/api/3/"><CampaignResult><success>false</success><message>Invalid
         Campaign ID</message></CampaignResult></CampaignResponse></soap:Body></soap:Envelope>
     http_version: 
-  recorded_at: Fri, 04 Nov 2016 16:40:46 GMT
+  recorded_at: Wed, 09 Nov 2016 17:04:09 GMT
 recorded_with: VCR 3.0.3
