--- a/spec/fixtures/vcr_cassettes/SoapyCake_Campaigns/_update/updated_campaigns.yml
+++ b/spec/fixtures/vcr_cassettes/SoapyCake_Campaigns/_update/updated_campaigns.yml
@@ -36,6 +36,7 @@ http_interactions:
               <cake:postback_url>http://example.com/postback</cake:postback_url>
               <cake:redirect_domain>trk_ad2games.cakemarketing.net</cake:redirect_domain>
               <cake:test_link>http://example.com/test</cake:test_link>
+              <cake:third_party_name>Max</cake:third_party_name>
               <cake:unique_key_hash>sha1</cake:unique_key_hash>
               <cake:campaign_id>23602</cake:campaign_id>
               <cake:expiration_date>1970-01-01T01:00:00</cake:expiration_date>
@@ -67,7 +68,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Fri, 04 Nov 2016 16:07:49 GMT
+      - Wed, 09 Nov 2016 17:16:24 GMT
       Content-Length:
       - '633'
     body:
@@ -77,5 +78,5 @@ http_interactions:
         xmlns="http://cakemarketing.com/api/3/"><CampaignResult><success>true</success><message>Campaign
         Updated</message><success_info><campaign_id>23602</campaign_id><affiliate_id>9643</affiliate_id><offer_id>11390</offer_id><offer_contract_id>10338</offer_contract_id><media_type_id>1</media_type_id><original>true</original></success_info></CampaignResult></CampaignResponse></soap:Body></soap:Envelope>
     http_version: 
-  recorded_at: Fri, 04 Nov 2016 16:08:11 GMT
+  recorded_at: Wed, 09 Nov 2016 17:16:39 GMT
 recorded_with: VCR 3.0.3
