--- a/spec/fixtures/vcr_cassettes/SoapyCake_AdminTrack/_mass_conversion_insert/inserts_conversions.yml
+++ b/spec/fixtures/vcr_cassettes/SoapyCake_AdminTrack/_mass_conversion_insert/inserts_conversions.yml
@@ -2,9 +2,9 @@
 http_interactions:
 - request:
     method: post
-    uri: https://cake-partner-domain.com/api/1/track.asmx
+    uri: https://cake-partner-domain.com/api/2/track.asmx
     body:
-      encoding: UTF-8
+      encoding: ASCII-8BIT
       string: |
         <?xml version="1.0"?>
         <env:Envelope xmlns:env="http://www.w3.org/2003/05/soap-envelope" xmlns:cake="http://cakemarketing.com/api/1/">
@@ -12,18 +12,28 @@ http_interactions:
           <env:Body>
             <cake:MassConversionInsert>
               <cake:api_key>cake-api-key</cake:api_key>
-              <cake:conversion_date>2015-05-06T02:00:00</cake:conversion_date>
+              <cake:conversion_date>2015-05-07T02:00:00</cake:conversion_date>
               <cake:affiliate_id>16059</cake:affiliate_id>
               <cake:campaign_id>13268</cake:campaign_id>
               <cake:sub_affiliate/>
               <cake:creative_id>5521</cake:creative_id>
-              <cake:total_to_insert>12</cake:total_to_insert>
+              <cake:total_to_insert>3</cake:total_to_insert>
+              <cake:note>Test created on 2017-07-24</cake:note>
+              <cake:payout>0.1</cake:payout>
+              <cake:received>0.2</cake:received>
+              <cake:transaction_ids>test-transaction-id-1,test-transaction-id-2,test-transaction-id-3</cake:transaction_ids>
             </cake:MassConversionInsert>
           </env:Body>
         </env:Envelope>
     headers:
       Content-Type:
       - application/soap+xml;charset=UTF-8
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
   response:
     status:
       code: 200
@@ -31,18 +41,18 @@ http_interactions:
     headers:
       Cache-Control:
       - private, max-age=0
+      Content-Length:
+      - '464'
       Content-Type:
       - application/soap+xml; charset=utf-8
-      Server:
-      - Microsoft-IIS/8.0
+      Date:
+      - Mon, 24 Jul 2017 19:42:39 GMT
       X-Aspnet-Version:
       - 4.0.30319
       X-Powered-By:
       - ASP.NET
-      Date:
-      - Wed, 06 May 2015 12:35:51 GMT
-      Content-Length:
-      - '464'
+      Connection:
+      - close
     body:
       encoding: UTF-8
       string: <?xml version="1.0" encoding="utf-8"?><soap:Envelope xmlns:soap="http://www.w3.org/2003/05/soap-envelope"
@@ -50,5 +60,5 @@ http_interactions:
         xmlns="http://cakemarketing.com/api/1/"><MassConversionInsertResult><success>true</success><message>Conversions
         Inserted</message></MassConversionInsertResult></MassConversionInsertResponse></soap:Body></soap:Envelope>
     http_version: 
-  recorded_at: Wed, 06 May 2015 12:35:53 GMT
-recorded_with: VCR 2.9.3
+  recorded_at: Mon, 24 Jul 2017 19:42:40 GMT
+recorded_with: VCR 3.0.3
