--- a/spec/fixtures/vcr_cassettes/SoapyCake_AdminTrack/_mass_conversion_insert/inserts_conversions.yml
+++ b/spec/fixtures/vcr_cassettes/SoapyCake_AdminTrack/_mass_conversion_insert/inserts_conversions.yml
@@ -4,10 +4,10 @@ http_interactions:
     method: post
     uri: https://cake-partner-domain.com/api/2/track.asmx
     body:
-      encoding: ASCII-8BIT
+      encoding: UTF-8
       string: |
         <?xml version="1.0"?>
-        <env:Envelope xmlns:env="http://www.w3.org/2003/05/soap-envelope" xmlns:cake="http://cakemarketing.com/api/1/">
+        <env:Envelope xmlns:env="http://www.w3.org/2003/05/soap-envelope" xmlns:cake="http://cakemarketing.com/api/2/">
           <env:Header/>
           <env:Body>
             <cake:MassConversionInsert>
@@ -39,6 +39,14 @@ http_interactions:
       code: 200
       message: OK
     headers:
+      Access-Control-Allow-Credentials:
+      - 'true'
+      Access-Control-Allow-Headers:
+      - Origin, X-Requested-With, Content-Type, Accept
+      Access-Control-Allow-Methods:
+      - POST,GET,OPTIONS,PUT,DELETE
+      Access-Control-Max-Age:
+      - '1728000'
       Cache-Control:
       - private, max-age=0
       Content-Length:
@@ -46,7 +54,7 @@ http_interactions:
       Content-Type:
       - application/soap+xml; charset=utf-8
       Date:
-      - Mon, 24 Jul 2017 19:42:39 GMT
+      - Thu, 30 Aug 2018 15:39:26 GMT
       X-Aspnet-Version:
       - 4.0.30319
       X-Powered-By:
@@ -57,8 +65,8 @@ http_interactions:
       encoding: UTF-8
       string: <?xml version="1.0" encoding="utf-8"?><soap:Envelope xmlns:soap="http://www.w3.org/2003/05/soap-envelope"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"><soap:Body><MassConversionInsertResponse
-        xmlns="http://cakemarketing.com/api/1/"><MassConversionInsertResult><success>true</success><message>Conversions
+        xmlns="http://cakemarketing.com/api/2/"><MassConversionInsertResult><success>true</success><message>Conversions
         Inserted</message></MassConversionInsertResult></MassConversionInsertResponse></soap:Body></soap:Envelope>
     http_version: 
-  recorded_at: Mon, 24 Jul 2017 19:42:40 GMT
-recorded_with: VCR 3.0.3
+  recorded_at: Thu, 30 Aug 2018 15:39:27 GMT
+recorded_with: VCR 4.0.0
