Use UpdateConversionEvents API for updating conversions
It adds the `unpaid_disposition_id` attribute.

--- a/api.yml
+++ b/api.yml
@@ -102,6 +102,7 @@ versions:
       rejected_dispositions: 1
       update_conversion: 4
       update_conversion_disposition: 2
+      update_conversion_events: 6
       update_conversion_price: 2
       update_conversion_revenue: 1
       update_lead_price: 2
