--- a/spec/fixtures/vcr_cassettes/SoapyCake_AdminTrack/_update_conversion/updates_a_conversion.yml
+++ b/spec/fixtures/vcr_cassettes/SoapyCake_AdminTrack/_update_conversion/updates_a_conversion.yml
@@ -2,15 +2,15 @@
 http_interactions:
 - request:
     method: post
-    uri: https://cake-partner-domain.com/api/4/track.asmx
+    uri: https://cake-partner-domain.com/api/6/track.asmx
     body:
       encoding: UTF-8
       string: |
         <?xml version="1.0"?>
-        <env:Envelope xmlns:env="http://www.w3.org/2003/05/soap-envelope" xmlns:cake="http://cakemarketing.com/api/4/">
+        <env:Envelope xmlns:env="http://www.w3.org/2003/05/soap-envelope" xmlns:cake="http://cakemarketing.com/api/6/">
           <env:Header/>
           <env:Body>
-            <cake:UpdateConversion>
+            <cake:UpdateConversionEvents>
               <cake:api_key>cake-api-key</cake:api_key>
               <cake:add_to_existing_payout>false</cake:add_to_existing_payout>
               <cake:received_option>total_revenue</cake:received_option>
@@ -23,37 +23,51 @@ http_interactions:
               <cake:conversion_id>145211</cake:conversion_id>
               <cake:offer_id>5032</cake:offer_id>
               <cake:payout>0.75</cake:payout>
-            </cake:UpdateConversion>
+            </cake:UpdateConversionEvents>
           </env:Body>
         </env:Envelope>
     headers:
       Content-Type:
       - application/soap+xml;charset=UTF-8
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
   response:
     status:
       code: 200
       message: OK
     headers:
+      Access-Control-Allow-Credentials:
+      - 'true'
+      Access-Control-Allow-Headers:
+      - Origin, X-Requested-With, Content-Type, Accept
+      Access-Control-Allow-Methods:
+      - POST,GET,OPTIONS,PUT,DELETE
+      Access-Control-Max-Age:
+      - '1728000'
       Cache-Control:
       - private, max-age=0
+      Content-Length:
+      - '470'
       Content-Type:
       - application/soap+xml; charset=utf-8
-      Server:
-      - Microsoft-IIS/8.5
+      Date:
+      - Mon, 20 Jan 2020 14:34:11 GMT
       X-Aspnet-Version:
       - 4.0.30319
       X-Powered-By:
       - ASP.NET
-      Date:
-      - Mon, 12 Oct 2015 09:58:20 GMT
-      Content-Length:
-      - '446'
+      Connection:
+      - close
     body:
       encoding: UTF-8
       string: <?xml version="1.0" encoding="utf-8"?><soap:Envelope xmlns:soap="http://www.w3.org/2003/05/soap-envelope"
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"><soap:Body><UpdateConversionResponse
-        xmlns="http://cakemarketing.com/api/4/"><UpdateConversionResult><success>true</success><message>Conversion
-        Updated</message></UpdateConversionResult></UpdateConversionResponse></soap:Body></soap:Envelope>
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"><soap:Body><UpdateConversionEventsResponse
+        xmlns="http://cakemarketing.com/api/6/"><UpdateConversionEventsResult><success>true</success><message>Conversion
+        Updated</message></UpdateConversionEventsResult></UpdateConversionEventsResponse></soap:Body></soap:Envelope>
     http_version: 
-  recorded_at: Mon, 12 Oct 2015 09:58:29 GMT
-recorded_with: VCR 2.9.3
+  recorded_at: Mon, 20 Jan 2020 14:34:12 GMT
+recorded_with: VCR 4.0.0
